added redeploy filter. Added basic filename filter - non conforming files will be rejected

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>vavr</artifactId>
             <version>0.10.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.1.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
