upload file refactor

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -3,6 +3,8 @@ MYSQL_SERVER=localhost
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-
 server.port=8100
-SAVE_LOCATION=d:/mavrep
+
+SAVE_LOCATION=c:/mavrep/mvn
+MAXIMUM_DIRECTORY_SIZE_MB=1000
+MAXIMUM_DIRECTORY_ITEMS_COUNT=30
