--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <module>persistence</module>
         <module>core</module>
         <module>api</module>
+        <module>validation</module>
     </modules>
 
     <build>
