--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -10,6 +10,10 @@
 
     <artifactId>validation</artifactId>
     <version>${revision}</version>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
