added functionality - add user to authrorized vault users

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>validation</artifactId>
             <version>${revision}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
