--- a/rest/src/test/resources/application.properties
+++ b/rest/src/test/resources/application.properties
@@ -9,3 +9,7 @@ JWT_TOKEN_VALIDITY=30
 
 PASSWORD_RECOVERY_TOKEN_VALIDITY=30
 APPLICATION_URL=http://localhost:8100
+
+MAILGUN_API_KEY=test
+MAILGUN_SENDER_DOMAIN=test
+MAILGUN_SENDER_URL=test
